Crypto: add options checkboxes

--- a/crypto.html
+++ b/crypto.html
@@ -35,6 +35,90 @@
         <div class="error-container" id="error-container">
           <p id="error-message">Not a valid crypto symbol</p>
         </div>
+        <div class="checkbox-container">
+          <input
+            type="checkbox"
+            class="check-input"
+            id="check1"
+            autocomplete="off"
+          />
+          <label for="check1" class="checkbox">
+            <svg viewBox="0 0 22 16" fill="none">
+              <path d="M1 6.85L8.09677 14L21 1" />
+            </svg>
+          </label>
+          <span>Ask price</span>
+        </div>
+        <div class="checkbox-container">
+          <input
+            type="checkbox"
+            class="check-input"
+            id="check2"
+            autocomplete="off"
+          />
+          <label for="check2" class="checkbox">
+            <svg viewBox="0 0 22 16" fill="none">
+              <path d="M1 6.85L8.09677 14L21 1" />
+            </svg>
+          </label>
+          <span>Min price</span>
+        </div>
+        <div class="checkbox-container">
+          <input
+            type="checkbox"
+            class="check-input"
+            id="check3"
+            autocomplete="off"
+          />
+          <label for="check3" class="checkbox">
+            <svg viewBox="0 0 22 16" fill="none">
+              <path d="M1 6.85L8.09677 14L21 1" />
+            </svg>
+          </label>
+          <span>Max price</span>
+        </div>
+        <div class="checkbox-container">
+          <input
+            type="checkbox"
+            class="check-input"
+            id="check4"
+            autocomplete="off"
+          />
+          <label for="check4" class="checkbox">
+            <svg viewBox="0 0 22 16" fill="none">
+              <path d="M1 6.85L8.09677 14L21 1" />
+            </svg>
+          </label>
+          <span>Last price</span>
+        </div>
+        <div class="checkbox-container">
+          <input
+            type="checkbox"
+            class="check-input"
+            id="check5"
+            autocomplete="off"
+          />
+          <label for="check5" class="checkbox">
+            <svg viewBox="0 0 22 16" fill="none">
+              <path d="M1 6.85L8.09677 14L21 1" />
+            </svg>
+          </label>
+          <span>Price change ($)</span>
+        </div>
+        <div class="checkbox-container">
+          <input
+            type="checkbox"
+            class="check-input"
+            id="check6"
+            autocomplete="off"
+          />
+          <label for="check6" class="checkbox">
+            <svg viewBox="0 0 22 16" fill="none">
+              <path d="M1 6.85L8.09677 14L21 1" />
+            </svg>
+          </label>
+          <span>Price change (%)</span>
+        </div>
         <button onclick="getCryptoPrices()">Show me prices!</button>
       </div>
     </div>
