Crypto: display error mesage on bad request

--- a/crypto.html
+++ b/crypto.html
@@ -121,6 +121,9 @@
         </div>
         <button onclick="getCryptoPrices()">Show me prices!</button>
       </div>
+      <div class="crypto-data-container" id="crypto-data-container">
+        <h1>all data here</h1>
+      </div>
     </div>
     <script src="./scripts/crypto.js"></script>
   </body>
