Crypto: added form's checkboxes validation

--- a/crypto.html
+++ b/crypto.html
@@ -120,6 +120,7 @@
           <span>Price change (%)</span>
         </div>
         <button onclick="getCryptoPrices()">Show me prices!</button>
+        <button onclick="buildUserSelectionJson()">test</button>
       </div>
       <div class="crypto-data-container" id="crypto-data-container">
         <h1>all data here</h1>
