Added label 'choose options'

--- a/crypto.html
+++ b/crypto.html
@@ -35,89 +35,92 @@
         <div class="error-container" id="error-container">
           <p id="error-message">Not a valid crypto symbol</p>
         </div>
-        <div class="checkbox-container">
-          <input
-            type="checkbox"
-            class="check-input"
-            id="askPrice"
-            autocomplete="off"
-          />
-          <label for="askPrice" class="checkbox">
-            <svg viewBox="0 0 22 16" fill="none">
-              <path d="M1 6.85L8.09677 14L21 1" />
-            </svg>
-          </label>
-          <span>Ask price</span>
-        </div>
-        <div class="checkbox-container">
-          <input
-            type="checkbox"
-            class="check-input"
-            id="lowPrice"
-            autocomplete="off"
-          />
-          <label for="lowPrice" class="checkbox">
-            <svg viewBox="0 0 22 16" fill="none">
-              <path d="M1 6.85L8.09677 14L21 1" />
-            </svg>
-          </label>
-          <span>Min price</span>
-        </div>
-        <div class="checkbox-container">
-          <input
-            type="checkbox"
-            class="check-input"
-            id="highPrice"
-            autocomplete="off"
-          />
-          <label for="highPrice" class="checkbox">
-            <svg viewBox="0 0 22 16" fill="none">
-              <path d="M1 6.85L8.09677 14L21 1" />
-            </svg>
-          </label>
-          <span>Max price</span>
-        </div>
-        <div class="checkbox-container">
-          <input
-            type="checkbox"
-            class="check-input"
-            id="lastPrice"
-            autocomplete="off"
-          />
-          <label for="lastPrice" class="checkbox">
-            <svg viewBox="0 0 22 16" fill="none">
-              <path d="M1 6.85L8.09677 14L21 1" />
-            </svg>
-          </label>
-          <span>Last price</span>
-        </div>
-        <div class="checkbox-container">
-          <input
-            type="checkbox"
-            class="check-input"
-            id="priceChange"
-            autocomplete="off"
-          />
-          <label for="priceChange" class="checkbox">
-            <svg viewBox="0 0 22 16" fill="none">
-              <path d="M1 6.85L8.09677 14L21 1" />
-            </svg>
-          </label>
-          <span>Price change (€)</span>
-        </div>
-        <div class="checkbox-container">
-          <input
-            type="checkbox"
-            class="check-input"
-            id="priceChangePercent"
-            autocomplete="off"
-          />
-          <label for="priceChangePercent" class="checkbox">
-            <svg viewBox="0 0 22 16" fill="none">
-              <path d="M1 6.85L8.09677 14L21 1" />
-            </svg>
-          </label>
-          <span>Price change (%)</span>
+        <div id="options">
+          <label for="options">Choose options</label>
+          <div class="checkbox-container">
+            <input
+              type="checkbox"
+              class="check-input"
+              id="askPrice"
+              autocomplete="off"
+            />
+            <label for="askPrice" class="checkbox">
+              <svg viewBox="0 0 22 16" fill="none">
+                <path d="M1 6.85L8.09677 14L21 1" />
+              </svg>
+            </label>
+            <span>Ask price</span>
+          </div>
+          <div class="checkbox-container">
+            <input
+              type="checkbox"
+              class="check-input"
+              id="lowPrice"
+              autocomplete="off"
+            />
+            <label for="lowPrice" class="checkbox">
+              <svg viewBox="0 0 22 16" fill="none">
+                <path d="M1 6.85L8.09677 14L21 1" />
+              </svg>
+            </label>
+            <span>Min price</span>
+          </div>
+          <div class="checkbox-container">
+            <input
+              type="checkbox"
+              class="check-input"
+              id="highPrice"
+              autocomplete="off"
+            />
+            <label for="highPrice" class="checkbox">
+              <svg viewBox="0 0 22 16" fill="none">
+                <path d="M1 6.85L8.09677 14L21 1" />
+              </svg>
+            </label>
+            <span>Max price</span>
+          </div>
+          <div class="checkbox-container">
+            <input
+              type="checkbox"
+              class="check-input"
+              id="lastPrice"
+              autocomplete="off"
+            />
+            <label for="lastPrice" class="checkbox">
+              <svg viewBox="0 0 22 16" fill="none">
+                <path d="M1 6.85L8.09677 14L21 1" />
+              </svg>
+            </label>
+            <span>Last price</span>
+          </div>
+          <div class="checkbox-container">
+            <input
+              type="checkbox"
+              class="check-input"
+              id="priceChange"
+              autocomplete="off"
+            />
+            <label for="priceChange" class="checkbox">
+              <svg viewBox="0 0 22 16" fill="none">
+                <path d="M1 6.85L8.09677 14L21 1" />
+              </svg>
+            </label>
+            <span>Price change (€)</span>
+          </div>
+          <div class="checkbox-container">
+            <input
+              type="checkbox"
+              class="check-input"
+              id="priceChangePercent"
+              autocomplete="off"
+            />
+            <label for="priceChangePercent" class="checkbox">
+              <svg viewBox="0 0 22 16" fill="none">
+                <path d="M1 6.85L8.09677 14L21 1" />
+              </svg>
+            </label>
+            <span>Price change (%)</span>
+          </div>
         </div>
         <button onclick="getCryptoDataJson()">Show me prices!</button>
       </div>
