--- a/crypto.html
+++ b/crypto.html
@@ -9,6 +9,7 @@
     <link href="./styles/crypto-style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <div class="loader"></div>
     <div class="topnav">
       <a href="./index.html">Home</a>
       <a class="active" href="./crypto.html">Crypto</a>
@@ -132,3 +133,13 @@
     <script src="./scripts/crypto.js"></script>
   </body>
 </html>
+
+<script>
+  window.addEventListener("load", () => {
+    const loader = document.querySelector(".loader");
+    loader.classList.add("loader--hidden");
+    loader.addEventListener("transitionend", () => {
+      document.body.removeChild(loader);
+    });
+  });
+</script>
