Added loader when fetching crypto data

--- a/crypto.html
+++ b/crypto.html
@@ -123,7 +123,8 @@
           </div>
         </div>
         <button onclick="getCryptoDataJson()">Show me prices!</button>
-        <button onclick="removeLoader()">test</button>
+        <button onclick="addLoader()">add</button>
+        <button onclick="removeLoader()">remove</button>
       </div>
       <div class="crypto-data-container" id="crypto-data-container">
         <h2 id="crypto-data-container-title">Data for</h2>
