--- a/crypto.html
+++ b/crypto.html
@@ -14,27 +14,24 @@
       <a class="active" href="./crypto.html">Crypto</a>
     </div>
     <div class="content-container">
-      <div class="title-container">
-        <h1>Get latest 24h crypto prices</h1>
-      </div>
+      <h1>Get latest 24h crypto prices</h1>
       <div class="form-container">
         <label for="symbol">Choose crypto</label>
         <select id="symbol" name="symbol" onchange="showUserInputField()">
           <option value="BTC">BTC</option>
           <option value="ETH">ETH</option>
           <option value="DOGE">DOGE</option>
-          <option value="SHIB">SHIB</option>
           <option value="Other">Other</option>
         </select>
+        <div class="error-container" id="error-container">
+          <p id="error-message">Not a valid crypto symbol</p>
+        </div>
         <input
           type="text"
           id="user-text-input"
           class="user-text-input"
-          placeholder="Type your choice, e.g: 'XRP'"
+          placeholder="Type your choice, e.g: XRP"
         />
-        <div class="error-container" id="error-container">
-          <p id="error-message">Not a valid crypto symbol</p>
-        </div>
         <div id="options">
           <label for="options">Choose options</label>
           <div class="checkbox-container">
@@ -124,8 +121,8 @@
         </div>
         <button onclick="getCryptoDataJson()">Show me prices!</button>
         <div class="crypto-data-container" id="crypto-data-container">
-          <h2 id="crypto-data-container-title">Data for</h2>
-          <h2 id="crypto-data-list"></h2>
+          <h1 id="crypto-data-container-title">Data for</h1>
+          <p id="crypto-data-list"></p>
         </div>
       </div>
     </div>
