Fix error in promise

--- a/crypto.html
+++ b/crypto.html
@@ -26,11 +26,21 @@
         <div class="error-container" id="error-container">
           <p id="error-message">Not a valid crypto symbol</p>
         </div>
-        <input type="text" id="user-text-input" class="user-text-input" placeholder="Type your choice, e.g: XRP" />
+        <input
+          type="text"
+          id="user-text-input"
+          class="user-text-input"
+          placeholder="Type your choice, e.g: XRP"
+        />
         <div id="options">
           <label for="options">Choose options</label>
           <div class="checkbox-container">
-            <input type="checkbox" class="check-input" id="askPrice" autocomplete="off" />
+            <input
+              type="checkbox"
+              class="check-input"
+              id="askPrice"
+              autocomplete="off"
+            />
             <label for="askPrice" class="checkbox">
               <svg viewBox="0 0 22 16" fill="none">
                 <path d="M1 6.85L8.09677 14L21 1" />
@@ -40,7 +50,12 @@
             <span>Ask price</span>
           </div>
           <div class="checkbox-container">
-            <input type="checkbox" class="check-input" id="lowPrice" autocomplete="off" />
+            <input
+              type="checkbox"
+              class="check-input"
+              id="lowPrice"
+              autocomplete="off"
+            />
             <label for="lowPrice" class="checkbox">
               <svg viewBox="0 0 22 16" fill="none">
                 <path d="M1 6.85L8.09677 14L21 1" />
@@ -49,7 +64,12 @@
             <span>Min price</span>
           </div>
           <div class="checkbox-container">
-            <input type="checkbox" class="check-input" id="highPrice" autocomplete="off" />
+            <input
+              type="checkbox"
+              class="check-input"
+              id="highPrice"
+              autocomplete="off"
+            />
             <label for="highPrice" class="checkbox">
               <svg viewBox="0 0 22 16" fill="none">
                 <path d="M1 6.85L8.09677 14L21 1" />
@@ -58,7 +78,12 @@
             <span>Max price</span>
           </div>
           <div class="checkbox-container">
-            <input type="checkbox" class="check-input" id="lastPrice" autocomplete="off" />
+            <input
+              type="checkbox"
+              class="check-input"
+              id="lastPrice"
+              autocomplete="off"
+            />
             <label for="lastPrice" class="checkbox">
               <svg viewBox="0 0 22 16" fill="none">
                 <path d="M1 6.85L8.09677 14L21 1" />
@@ -67,7 +92,12 @@
             <span>Last price</span>
           </div>
           <div class="checkbox-container">
-            <input type="checkbox" class="check-input" id="priceChange" autocomplete="off" />
+            <input
+              type="checkbox"
+              class="check-input"
+              id="priceChange"
+              autocomplete="off"
+            />
             <label for="priceChange" class="checkbox">
               <svg viewBox="0 0 22 16" fill="none">
                 <path d="M1 6.85L8.09677 14L21 1" />
@@ -76,7 +106,12 @@
             <span>Price change (€)</span>
           </div>
           <div class="checkbox-container">
-            <input type="checkbox" class="check-input" id="priceChangePercent" autocomplete="off" />
+            <input
+              type="checkbox"
+              class="check-input"
+              id="priceChangePercent"
+              autocomplete="off"
+            />
             <label for="priceChangePercent" class="checkbox">
               <svg viewBox="0 0 22 16" fill="none">
                 <path d="M1 6.85L8.09677 14L21 1" />
@@ -88,7 +123,9 @@
         <button class="form-button" onclick="getCryptoDataJson()">
           Show me prices!
         </button>
-        <button class="form-button" onclick="clearData()">Clear</button>
+        <button class="form-button" onclick="hideCryptoDataContainer()">
+          Clear
+        </button>
         <div class="crypto-data-container" id="crypto-data-container">
           <h1 id="crypto-data-container-title">Data for</h1>
           <p id="crypto-data-list"></p>
