--- a/crypto.html
+++ b/crypto.html
@@ -125,6 +125,7 @@
         <button class="form-button" onclick="hideCryptoDataContainer()">
           Clear
         </button>
+        <button onclick="readQueryString()">test</button>
         <div class="crypto-data-container" id="crypto-data-container">
           <h1 id="crypto-data-container-title">Data for</h1>
           <p id="crypto-data-list"></p>
